# alpha-miner

./: .gitignore  BUILD_LOG.md  CLAUDE.md  DIAGNOSTIC_REPORT.md  DOCS.md  README.md  alpha-miner-steps-wsl2.md  code-quality-hardening.md  evolution-engine-v2-upgrade.md  factor-mining-v2.md  narrative-strategy-upgrade.md  pyproject.toml  strategy-backtest-upgrade.md
cli/: __main__.py  backtest.py  collect.py  drift.py  mine.py  query.py  recommend.py  replay.py  report.py  signal.py  strategy.py
config/: factors.yaml  recommend.yaml  settings.yaml  settings.yaml.example
docs/: integration_report_a_share_sentiment.md
knowledge_base/: strategies.yaml  theories.yaml
recommendations/: 2026-04-24_recommend.json  2026-04-24_recommend.txt  2026-04-27_recommend.json  2026-04-27_recommend.txt  2026-04-28_recommend.json  2026-04-28_recommend.txt
reports/: 2026-04-20_brief.txt
scripts/: _check_db.py  _quick_recommend.py  analyze_today.py  backfill_all.py  backfill_concepts.py  backfill_daily_price.py  backfill_factor_stocks.py  backfill_lhb.py  backfill_pools.py  backfill_sina.py  backfill_smart.py  backfill_tencent.py  check_data.py  check_ic.py  check_ic_all.py  ci_local.sh  cleanup_duplicates.py  compute_factors.py  compute_ic.py  daily_run.sh  deep_pick.py  deep_review.py  evening_recommend.py  evening_review.py  fill_daily_price.py  fill_daily_price_v2.py  hourly_mine.sh  morning_reconfirm.py  quick_backfill.py  send_wechat.py  setup_cron.sh  test_akshare.py  validate_data.py
signals/: 2026-04-24.txt  2026-04-26.txt
tests/: test_backtest_engine.py  test_backtester.py  test_cli_smoke.py  test_collect_live.py  test_daily_report.py  test_data_layer.py  test_drift.py  test_evolution.py  test_evolution_integrity.py  test_external_deps.py  test_factor_robustness.py  test_formula_factors.py  test_hard_evolution.py  test_hard_ic.py  test_mining.py  (+18 more)
(+67 files in other folders)
